header and hero html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Calista Mayer | Web Dev</title>
 </head>
 <body>
-    Hello World
+    <!-- header start -->
+    <header>
+        <h1>
+            Calista Mayer
+        </h1>
+        <!-- navigation bar start -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-calista">About Calista</a>
+                </li>
+                <li>
+                    <a href="#work-portfolio">Work Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact-calista">Contact Calista</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- navigation bar end -->
+    </header>
+    <!-- header end -->
+
+    <!-- hero start -->
+    <section>
+        <h2>Hello Calista</h2>
+    </section>
+    <!-- hero end -->
 </body>
 </html>
