--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- header end -->
 
     <!-- hero start -->
-    <section>
+    <section class="hero">
         <h2>Hello Calista</h2>
     </section>
     <!-- hero end -->
