content html structure

--- a/index.html
+++ b/index.html
@@ -32,7 +32,62 @@
     <!-- hero start -->
     <section class="hero">
         <h2>Hello Calista</h2>
+        <img src="./assets/images/Headshot.JPG" alt="2019 headshot of Calista Mayer smiling in a blazer" />
     </section>
     <!-- hero end -->
+
+    <!-- about me start -->
+    <section id="about-calista">
+        <h2>About Calista</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sunt iusto amet incidunt voluptatem voluptatum at obcaecati neque nemo, atque debitis nihil adipisci perferendis rerum iure esse eius, aliquam exercitationem.
+        </p>
+    </section>
+    <!-- about me end -->
+
+    <!-- work portfolio start -->
+    <section id="work-portfolio">
+        <h2>Work Portfolio</h2>
+        <!-- application tiles start -->
+        <div>
+            <!-- featured application start -->
+            <article>
+                <h3>Run Buddy</h3>
+                <p>HTML, CSS</p>
+            </article>
+            <!-- featured application end -->
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </div>
+        <!-- application tiles end -->
+    </section>
+    <!-- work portfolio end -->
+
+    <!-- contact section start -->
+    <section id="contact-calista">
+        <h2>Contact Calista</h2>
+        <div>
+            <ul>
+                <li>Email</li>
+                <li>LinkedIn</li>
+                <li>GitHub</li>
+            </ul>
+        </div>
+    </section>
+    <!-- contact section end -->
 </body>
 </html>
