header and hero styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calista Mayer | Web Dev</title>
 </head>
@@ -15,13 +16,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about-calista">About Calista</a>
+                    <a href="#about-calista">About</a>
                 </li>
                 <li>
                     <a href="#work-portfolio">Work Portfolio</a>
                 </li>
                 <li>
-                    <a href="#contact-calista">Contact Calista</a>
+                    <a href="#contact-calista">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -31,7 +32,7 @@
 
     <!-- hero start -->
     <section class="hero">
-        <h2>Hello Calista</h2>
+        <h2>Hello Calista!</h2>
         <img src="./assets/images/Headshot.JPG" alt="2019 headshot of Calista Mayer smiling in a blazer" />
     </section>
     <!-- hero end -->
