style content headers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calista Mayer | Web Dev</title>
+    <title>Calista Mayer Portfolio</title>
 </head>
 <body>
     <!-- header start -->
@@ -33,12 +33,14 @@
     <!-- hero start -->
     <section class="hero">
         <h2>Hello Calista!</h2>
-        <img src="./assets/images/Headshot.JPG" alt="2019 headshot of Calista Mayer smiling in a blazer" />
+        <p>
+           <img src="./assets/images/Headshot.JPG" alt="2019 headshot of Calista Mayer smiling in a blazer" /> 
+        </p>
     </section>
     <!-- hero end -->
 
     <!-- about me start -->
-    <section id="about-calista">
+    <section class="content" id="about-calista">
         <h2>About Calista</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sunt iusto amet incidunt voluptatem voluptatum at obcaecati neque nemo, atque debitis nihil adipisci perferendis rerum iure esse eius, aliquam exercitationem.
@@ -47,12 +49,12 @@
     <!-- about me end -->
 
     <!-- work portfolio start -->
-    <section id="work-portfolio">
+    <section class="content" id="work-portfolio">
         <h2>Work Portfolio</h2>
         <!-- application tiles start -->
         <div>
             <!-- featured application start -->
-            <article>
+            <article class="run-buddy">
                 <h3>Run Buddy</h3>
                 <p>HTML, CSS</p>
             </article>
@@ -79,7 +81,7 @@
     <!-- work portfolio end -->
 
     <!-- contact section start -->
-    <section id="contact-calista">
+    <section class="content" id="contact-calista">
         <h2>Contact Calista</h2>
         <div>
             <ul>
