create app tiles

--- a/index.html
+++ b/index.html
@@ -51,29 +51,39 @@
     <!-- work portfolio start -->
     <section class="content" id="work-portfolio">
         <h2>Work Portfolio</h2>
-        <!-- application tiles start -->
-        <div>
-            <!-- featured application start -->
-            <article class="run-buddy">
-                <h3>Run Buddy</h3>
-                <p>HTML, CSS</p>
+        <!-- application grid start -->
+        <div class="application-grid-container">
+            <a href="https://calistamayer.github.io/run-buddy/">
+                <article class="app-tile run-buddy">
+                    <div class="caption">
+                        <h3>Run Buddy</h3>
+                        <p>HTML, CSS</p>
+                    </div>
+                </article>
+            </a>
+            <article class="app-tile placeholder1">
+                <div class="caption">
+                    <h3>Hello Application</h3>
+                    <p>This is a placeholder.</p>
+                </div>
             </article>
-            <!-- featured application end -->
-            <article>
-                <h3></h3>
-                <p></p>
+            <article class="app-tile placeholder2">
+                <div class="caption">
+                    <h3>Fancy App</h3>
+                    <p>This is a placeholder.</p> 
+                </div>
             </article>
-            <article>
-                <h3></h3>
-                <p></p>
+            <article class="app-tile placeholder3">
+                <div class="caption">
+                    <h3>Happlication</h3>
+                    <p>This is a placeholder.</p>
+                </div>
             </article>
-            <article>
-                <h3></h3>
-                <p></p>
-            </article>
-            <article>
-                <h3></h3>
-                <p></p>
+            <article class="app-tile placeholder4">
+                <div class="caption">
+                    <h3>Mystery Machine</h3>
+                    <p>This is a placeholder.</p> 
+                </div>
             </article>
         </div>
         <!-- application tiles end -->
