--- a/index.html
+++ b/index.html
@@ -53,38 +53,36 @@
         <h2>Work Portfolio</h2>
         <!-- application grid start -->
         <div class="application-grid-container">
-            <a href="https://calistamayer.github.io/run-buddy/">
-                <article class="app-tile run-buddy">
-                    <div class="caption">
-                        <h3>Run Buddy</h3>
-                        <p>HTML, CSS</p>
-                    </div>
-                </article>
+            <a class="app-tile run-buddy" href="https://calistamayer.github.io/run-buddy/">
+                <div class="caption">
+                    <h3>Run Buddy</h3>
+                    <p>HTML, CSS</p>
+                </div>
             </a>
-            <article class="app-tile placeholder1">
+            <a class="app-tile placeholder1" href="#work-portfolio">
                 <div class="caption">
                     <h3>Hello Application</h3>
                     <p>This is a placeholder.</p>
                 </div>
-            </article>
-            <article class="app-tile placeholder2">
+            </a>
+            <a class="app-tile placeholder2" href="#work-portfolio">
                 <div class="caption">
                     <h3>Fancy App</h3>
                     <p>This is a placeholder.</p> 
                 </div>
-            </article>
-            <article class="app-tile placeholder3">
+            </a>
+            <a class="app-tile placeholder3" href="#work-portfolio">
                 <div class="caption">
                     <h3>Happlication</h3>
                     <p>This is a placeholder.</p>
                 </div>
-            </article>
-            <article class="app-tile placeholder4">
+            </a>
+            <a class="app-tile placeholder4" href="#work-portfolio">
                 <div class="caption">
                     <h3>Mystery Machine</h3>
                     <p>This is a placeholder.</p> 
                 </div>
-            </article>
+            </a>
         </div>
         <!-- application tiles end -->
     </section>
