content grid styles

--- a/index.html
+++ b/index.html
@@ -39,66 +39,74 @@
     </section>
     <!-- hero end -->
 
-    <!-- about me start -->
-    <section class="content" id="about-calista">
-        <h2>About Calista</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sunt iusto amet incidunt voluptatem voluptatum at obcaecati neque nemo, atque debitis nihil adipisci perferendis rerum iure esse eius, aliquam exercitationem.
-        </p>
-    </section>
-    <!-- about me end -->
-
-    <!-- work portfolio start -->
-    <section class="content" id="work-portfolio">
-        <h2>Work Portfolio</h2>
-        <!-- application grid start -->
-        <div class="application-grid-container">
-            <a class="app-tile run-buddy" href="https://calistamayer.github.io/run-buddy/">
-                <div class="caption">
-                    <h3>Run Buddy</h3>
-                    <p>HTML, CSS</p>
-                </div>
-            </a>
-            <a class="app-tile placeholder1" href="#work-portfolio">
-                <div class="caption">
-                    <h3>Hello Application</h3>
-                    <p>This is a placeholder.</p>
-                </div>
-            </a>
-            <a class="app-tile placeholder2" href="#work-portfolio">
-                <div class="caption">
-                    <h3>Fancy App</h3>
-                    <p>This is a placeholder.</p> 
-                </div>
-            </a>
-            <a class="app-tile placeholder3" href="#work-portfolio">
-                <div class="caption">
-                    <h3>Happlication</h3>
-                    <p>This is a placeholder.</p>
-                </div>
-            </a>
-            <a class="app-tile placeholder4" href="#work-portfolio">
-                <div class="caption">
-                    <h3>Mystery Machine</h3>
-                    <p>This is a placeholder.</p> 
-                </div>
-            </a>
+    <!-- content start -->
+    <div class="content-grid-container">   
+        <!-- about me start -->
+        <div class="content-item about-calista content-header" id="about-calista">
+            <h2>About Calista</h2>
         </div>
-        <!-- application tiles end -->
-    </section>
-    <!-- work portfolio end -->
-
-    <!-- contact section start -->
-    <section class="content" id="contact-calista">
-        <h2>Contact Calista</h2>
-        <div>
-            <ul>
-                <li>Email</li>
-                <li>LinkedIn</li>
-                <li>GitHub</li>
-            </ul>
+        <div class="content-item about-calista">
+            <p>
+            Calista Mayer is a beginner at web development, enrolled in UCBE's Coding Bootcamp. Her interest in web development began in seventh grade when she began to use HTML and CSS to customize pages on Neopets.com.
+            <br /><br />
+            At Western Washington University, Calista majored in Philosophy. Her favorite philosophical sub-topics include Asian philosophies such as yoga, Daoism, and zen. Symbolic logic, a key component in evaluating philosophical arguments, is reflected in the logical structure of technologies like HTML and CSS. 
+            </p>
         </div>
-    </section>
-    <!-- contact section end -->
+        <!-- about me end -->
+
+        <!-- work portfolio start -->
+            <div class="content-item work-portfolio content-header" id="work-portfolio">
+                <h2>Work Portfolio</h2>
+            </div>
+            <!-- application grid start -->
+                <div class="content-item work-portfolio application-grid-container">
+                    <a class="app-tile run-buddy" href="https://calistamayer.github.io/run-buddy/">
+                        <div class="caption">
+                            <h3>Run Buddy</h3>
+                            <p>HTML, CSS</p>
+                        </div>
+                    </a>
+                    <a class="app-tile placeholder1" href="#work-portfolio">
+                        <div class="caption">
+                            <h3>Hello Application</h3>
+                            <p>This is a placeholder.</p>
+                        </div>
+                    </a>
+                    <a class="app-tile placeholder2" href="#work-portfolio">
+                        <div class="caption">
+                            <h3>Fancy App</h3>
+                            <p>This is a placeholder.</p> 
+                        </div>
+                    </a>
+                    <a class="app-tile placeholder3" href="#work-portfolio">
+                        <div class="caption">
+                            <h3>Happlication</h3>
+                            <p>This is a placeholder.</p>
+                        </div>
+                    </a>
+                    <a class="app-tile placeholder4" href="#work-portfolio">
+                        <div class="caption">
+                            <h3>Mystery Machine</h3>
+                            <p>This is a placeholder.</p> 
+                        </div>
+                    </a>
+                </div>
+                <!-- application tiles end -->
+        <!-- work portfolio end -->
+
+        <!-- contact section start -->
+        <div class="content-item content-header" id="contact-calista">
+            <h2>Contact Calista</h2> 
+        </div>
+            <div class="content-item">
+                <ul>
+                    <li>Email</li>
+                    <li>LinkedIn</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+       
+        <!-- contact section end -->
+    </div> <!-- content grid div -->
 </body>
 </html>
