add Living Room app

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                             <p>HTML, CSS</p>
                         </div>
                     </a>
-                    <a class="app-tile placeholder1" href="#work-portfolio">
+                    <a class="app-tile living-room" href="https://yooperjb.github.io/Living-Room/">
                         <div class="caption">
-                            <h3>Hello Application</h3>
-                            <p>This is a placeholder.</p>
+                            <h3>Living Room</h3>
+                            <p>HTML, CSS, Materialize, jQuery</p>
                         </div>
                     </a>
                     <a class="app-tile placeholder2" href="#work-portfolio">
