add the adventure series

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </a>
                     <a class="app-tile placeholder2" href="#work-portfolio">
                         <div class="caption">
-                            <h3>Fancy App</h3>
-                            <p>This is a placeholder.</p> 
+                            <h3>The Adventure Series</h3>
+                            <p>Sequelize, Handlebars, Express, Heroku</p> 
                         </div>
                     </a>
                     <a class="app-tile placeholder3" href="#work-portfolio">
