--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <p>HTML, CSS, Materialize, jQuery</p>
                         </div>
                     </a>
-                    <a class="app-tile placeholder2" href="#work-portfolio">
+                    <a class="app-tile adventure-series" href="https://damp-anchorage-73357.herokuapp.com/">
                         <div class="caption">
                             <h3>The Adventure Series</h3>
                             <p>Sequelize, Handlebars, Express, Heroku</p> 
