updated projects and added .gitignore

--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
                             <p>Sequelize, Handlebars, Express, Heroku</p> 
                         </div>
                     </a>
-                    <a class="app-tile placeholder3" href="#work-portfolio">
+                    <a class="app-tile must-fit-pets" href="https://quiet-refuge-60774.herokuapp.com/">
                         <div class="caption">
-                            <h3>Happlication</h3>
-                            <p>This is a placeholder.</p>
+                            <h3>MustFit Pets</h3>
+                            <p>MongoDB, GraphQL, Express.js, React</p>
                         </div>
                     </a>
-                    <a class="app-tile placeholder4" href="#work-portfolio">
+                    <a class="app-tile deep-thoughts" href="https://enigmatic-reaches-76156.herokuapp.com/">
                         <div class="caption">
-                            <h3>Mystery Machine</h3>
-                            <p>This is a placeholder.</p> 
+                            <h3>Deep Thoughts</h3>
+                            <p>Express.js, Handlebars.js</p> 
                         </div>
                     </a>
                 </div>
@@ -100,9 +100,9 @@
         </div>
             <div class="content-item">
                 <ul>
-                    <li>Email</li>
-                    <li>LinkedIn</li>
-                    <li>GitHub</li>
+                    <li><a href="mailto:calista.a.mayer@gmail.com">Email</a></li>
+                    <li><a href="https://www.linkedin.com/in/calista-mayer-59487813a/">LinkedIn</a></li>
+                    <li><a href="https://github.com/calistamayer">GitHub</a></li>
                 </ul>
             </div>
        
